style: formatting add skip link style and formate css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
 
   <main id="maincontent">
-    <a class="skip" tabindex="0" href="#restaurants-list" aria-label="Skip to Main Content">Skip to Main Content</a>
+   <div class="skip"><a  href="#restaurants-list" aria-label="Skip to Main Content">Skip to Main Content</a></div> 
     <section id="map-container">
       <div id="map"></div>
     </section>
