fix Review project and fix code

--- a/restaurant.html
+++ b/restaurant.html
@@ -34,8 +34,8 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map" aria-label="map"></div>
+    <section id="map-container" aria-role="map-container">
+      <div id="map" aria-label="map" ></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
