fix fix and add accessibility features

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
 
-  <main id="maincontent">
+  <main id="maincontent" role="application">
    <div class="skip"><a href="#filter-results" aria-label="Skip to Main Content">Skip to Main Content</a></div> 
     <section id="map-container">
       <div id="map"></div>
