--- a/restaurant.html
+++ b/restaurant.html
@@ -32,7 +32,7 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <main id="maincontent" role="application">
     <!-- Beginning map -->
     <section id="map-container" aria-role="map-container">
       <div id="map" aria-label="map" ></div>
@@ -48,7 +48,7 @@
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
+    <section id="reviews-container" aria-label="Reviews">
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
